syntax = "proto3";
import "p2p/proto/common.proto";

option go_package = "github.com/starknet-io/starknet-p2pspecs/p2p/proto/sync/common";

message StateDiffCommitment {
    uint64 state_diff_length = 1;
    Hash root = 2;
}

message Iteration {
    enum Direction {
        Forward  = 0;
        Backward = 1;
    }
    oneof start {
        uint64 block_number = 1;
        Hash header = 2;
    }
    Direction direction = 3;
    uint64 limit = 4;
    uint64 step = 5;  // to allow interleaving from several nodes
    // bool interleave = 6; // return results in any order of blocks, per block the messages should still be in the order specified
}
